Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4593

Phonon demos don't build for ARMv5/Raptor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • None
    • 4.6.0
    • None
    • None
    • 342fcb287b09d016d482e25482ddd1b36e2983a3

      configure -platform win32-g++ -xplatform symbian-sbsv2
      qmake
      sbs -c armv5_udeb [-e -j etc]

      FAILED link for armv5_udeb: epoc32\release\armv5\udeb\capabilities.exe.sym
      mmp: examples\phonon\capabilities\capabilities_0xA000CF69.mmp
      Error: L6218E: Undefined symbol vtable for Phonon::ObjectDescriptionModel<(Phonon::ObjectDescriptionType)0> (referred from window.o).
      Not enough information to list image symbols.
      Finished: 1 information, 0 warning and 1 error messages.

      Seems related to that templated class using function exports instead of exporting the whole class.
      Tested on S60 5.0 public SDK

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shkearns Shane Kearns
            shkearns Shane Kearns
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes