Fix linker error with Symbian/ARM RVCT ABIv2 toolchain

Not exporting the whole class prevents the capabilities example from
linking, because the vtable is not exported.
Changing from member exports to exporting the class also fixes the GCC
3.4.x compiler error.

Task-number: QTBUG-4593
Reviewed-by: Thiago