src/3rdparty/phonon/phonon/objectdescriptionmodel.h
@@ -175,26 +175,18 @@ namespace Phonon
      * \author Matthias Kretz <kretz@kde.org>
      */
     template<ObjectDescriptionType type>
-    class ObjectDescriptionModel : public QAbstractListModel
+    class PHONON_EXPORT ObjectDescriptionModel : public QAbstractListModel
     {
         public:
             Q_OBJECT_CHECK
 
-/* MinGW 3.4.x gives an ICE when trying to instantiate one of the
-   ObjectDescriptionModel<foo> classes because it can't handle
-   half exported classes correct. gcc 4.3.x has a fix for this but
-   we currently there's no official gcc 4.3 on windows available.
-   Because of this we need this little hack
- */
-#if !defined(Q_CC_MINGW) || __MINGW32_MAJOR_VERSION >= 4
             /** \internal */
-            static PHONON_EXPORT const QMetaObject staticMetaObject;
+            static const QMetaObject staticMetaObject;
             /** \internal */
-            PHONON_EXPORT const QMetaObject *metaObject() const;
+            const QMetaObject *metaObject() const;
             /** \internal */
-            PHONON_EXPORT void *qt_metacast(const char *_clname);
+            void *qt_metacast(const char *_clname);
             //int qt_metacall(QMetaObject::Call _c, int _id, void **_a);
-#endif
 
             /**
              * Returns the number of rows in the model. This value corresponds
